            - Reduced the progress timer types to just radial and bar - added in reverse, midpoint, barChangeRate to be have more flexible options to modify the progress.
. [FIX] All: Removed deprecated methods and classes that were scheduled for removal post 1.0

version 1.0-rc - XX-Apr-2011
. [FIX] All: Removed many deprecated methods and classes that were scheduled for removal on v1.0
. [3RD] FontLabel: Fixes issues with wrapping and apostraphes and hyphens (issue #1124)

version 1.0-beta - 01-Mar-2011
. [NEW] Actions: Repeat and RepeatForEver has getter/setter for the inner action (issue #1110)
. [NEW] LayerGradient: Added "compressed interpolation" (default mode) in order to display all graident's colors in any vector
. [NEW-MAC] Added CC_DIRECTOR_INIT(). It is possible to create a Mac Window programatically
. [NEW-MAC] EventDispatcher: Added support for Touch events
. [FIX] CocosDenshion: Improved logging
. [FIX] CocosDenshion: Fixed excessively large or negative gain values cause distorted audio in the simulator.
. [FIX] CocosDenshion: Added guards to prevent memory corruption caused by invalid parameters
. [FIX] CocosDenshion: Define some constants for defaults, make const parameter on buffer asynch load method
. [FIX] CCArray: insertObjectAtIndex checks bounds (issue #1121)
. [FIX] Director: Fixed possible crash when purging the TextureCache
. [FIX] Layer: CCMultiplexLayer deprecated. New name is CCLayerMultiplex
. [FIX] Particles: consumes less memory (12 bytes less per particle) and are a bit faster
. [FIX] ProgressTimer: Consumes less memory
. [FIX] RenderTexture: Added possibility to save buffer in any place (issue #1100)
. [FIX] RenderTexture: re-added getUIImageFromBuffer method. Supports RetinaDisplay
. [FIX] Sprite: flipx/flipy don't modify the contentSize (issue #1073)
. [FIX] SpriteFrame: setRect sets pixels too. setRectInPixels sets points too (issue #1088)
. [FIX] Templates: ItunesArtwork renamed to iTunesArtwork (issue #1092)