@@ -52,7 +52,7 @@ const char kCCProgressTextureCoords = 0x4b;
 @synthesize percentage = percentage_;
 @synthesize sprite = sprite_;
 @synthesize type = type_;
-@synthesize reverse = reverse_;
+@synthesize reverseProgress = reverseProgress_;
 @synthesize midpoint = midpoint_;
 @synthesize barChangeRate = barChangeRate_;
 @synthesize vertexData = vertexData_;
@@ -71,10 +71,10 @@ const char kCCProgressTextureCoords = 0x4b;
 		vertexDataCount_ = 0;
 		
 		self.anchorPoint = ccp(0.5f,0.5f);
-		self.type = kCCProgressTimerTypeRadial;
-		self.reverse = NO;
-		self.midpoint = ccp(.5f, .5f);
-		self.barChangeRate = ccp(1,1);
+		type_ = kCCProgressTimerTypeRadial;
+		reverseProgress_ = NO;
+		midpoint_ = ccp(.5f, .5f);
+		barChangeRate_ = ccp(1,1);
 
 		// shader program
 		self.shaderProgram = [[CCShaderCache sharedShaderCache] programForKey:kCCShader_PositionTextureColor];
@@ -133,15 +133,17 @@ const char kCCProgressTextureCoords = 0x4b;
 		type_ = newType;
 	}
 }
--(void)setReverse:(BOOL)reverse
+-(void)setReverseProgress:(BOOL)reverse
 {
-	reverse_ = reverse;
-	
-	//	release all previous information
-	if(vertexData_){
-		free(vertexData_);
-		vertexData_ = NULL;
-		vertexDataCount_ = 0;
+	if( reverseProgress_ != reverse ) {
+		reverseProgress_ = reverse;
+		
+		//	release all previous information
+		if(vertexData_){
+			free(vertexData_);
+			vertexData_ = NULL;
+			vertexDataCount_ = 0;
+		}
 	}
 }
 -(void)setColor:(ccColor3B)c
@@ -244,7 +246,7 @@ const char kCCProgressTextureCoords = 0x4b;
 	
 	float alpha = percentage_ / 100.f;
 	
-	float angle = 2.f*((float)M_PI) * ( reverse_ == YES ? alpha : 1.f - alpha);
+	float angle = 2.f*((float)M_PI) * ( reverseProgress_ == YES ? alpha : 1.f - alpha);
 	
 	//	We find the vector to do a hit detection based on the percentage
 	//	We know the first vector is the one @ 12 o'clock (top,mid) so we rotate 
@@ -402,7 +404,7 @@ const char kCCProgressTextureCoords = 0x4b;
 	}
 	
 	
-	if (!reverse_) {
+	if (!reverseProgress_) {
 		if(!vertexData_) {
 			vertexDataCount_ = 4;
 			vertexData_ = malloc(vertexDataCount_ * sizeof(ccV2F_C4B_T2F));
@@ -467,7 +469,7 @@ const char kCCProgressTextureCoords = 0x4b;
 -(CGPoint)boundaryTexCoord:(char)index
 {
 	if (index < kProgressTextureCoordsCount) {
-		if (reverse_) {
+		if (reverseProgress_) {
 			return ccp((kCCProgressTextureCoords>>(7-(index<<1)))&1,(kCCProgressTextureCoords>>(7-((index<<1)+1)))&1);
 		} else {
 			return ccp((kCCProgressTextureCoords>>((index<<1)+1))&1,(kCCProgressTextureCoords>>(index<<1))&1);
@@ -512,7 +514,7 @@ const char kCCProgressTextureCoords = 0x4b;
 	if(type_ == kCCProgressTimerTypeRadial){
 		glDrawArrays(GL_TRIANGLE_FAN, 0, vertexDataCount_);
 	} else if (type_ == kCCProgressTimerTypeBar) {
-		if (!reverse_) {
+		if (!reverseProgress_) {
 			glDrawArrays(GL_TRIANGLE_STRIP, 0, vertexDataCount_);
 		} else {
 			glDrawArrays(GL_TRIANGLE_STRIP, 0, vertexDataCount_/2);
