@@ -169,25 +169,25 @@ Class restartAction()
 	//
 	// Notice: u,v tex coordinates are inverted
 	//
-	ccV3F_C4F_T2F_Quad quads[] = {
+	ccV3F_C4B_T2F_Quad quads[] = {
 		{
-			{{0,0,0},{0,0,1,1},{0.0f,1.0f},},				// bottom left
-			{{s.width,0,0},{0,0,1,0},{1.0f,1.0f},},			// bottom right
-			{{0,s.height,0},{0,0,1,0},{0.0f,0.0f},},		// top left
-			{{s.width,s.height,0},{0,0,1,1},{1.0f,0.0f},},	// top right
+			{{0,0,0},{0,0,255,255},{0.0f,1.0f},},				// bottom left
+			{{s.width,0,0},{0,0,255,0},{1.0f,1.0f},},			// bottom right
+			{{0,s.height,0},{0,0,255,0},{0.0f,0.0f},},			// top left
+			{{s.width,s.height,0},{0,0,255,255},{1.0f,0.0f},},	// top right
 		},		
 		{
-			{{40,40,0},{1,1,1,1},{0.0f,0.2f},},			// bottom left
-			{{120,80,0},{1,0,0,1},{0.5f,0.2f},},		// bottom right
-			{{40,160,0},{1,1,1,1},{0.0f,0.0f},},		// top left
-			{{160,160,0},{0,1,0,1},{0.5f,0.0f},},		// top right
+			{{40,40,0},{255,255,255,255},{0.0f,0.2f},},			// bottom left
+			{{120,80,0},{255,0,0,255},{0.5f,0.2f},},			// bottom right
+			{{40,160,0},{255,255,255,255},{0.0f,0.0f},},		// top left
+			{{160,160,0},{0,255,0,255},{0.5f,0.0f},},			// top right
 		},
 
 		{
-			{{s.width/2,40,0},{1,0,0,1},{0.0f,1.0f},},		// bottom left
-			{{s.width,40,0},{0,1,0,1},{1.0f,1.0f},},		// bottom right
-			{{s.width/2-50,200,0},{0,0,1,1},{0.0f,0.0f},},	// top left
-			{{s.width,100,0},{1,1,0,1},{1.0f,0.0f},},		// top right
+			{{s.width/2,40,0},{255,0,0,255},{0.0f,1.0f},},		// bottom left
+			{{s.width,40,0},{0,255,0,255},{1.0f,1.0f},},		// bottom right
+			{{s.width/2-50,200,0},{0,0,255,255},{0.0f,0.0f},},	// top left
+			{{s.width,100,0},{255,0,255,255},{1.0f,0.0f},},		// top right
 		},
 		
 	};
