@@ -3,6 +3,7 @@ version 2.0-alpha XX-Apr-2011
             -Convenience class constructor now passes in CCSprite (this gives developers easier access to timer with CCSpriteFrames, CCSprites, etc)
             - Reduced the progress timer types to just radial and bar - added in reverse, midpoint, barChangeRate to be have more flexible options to modify the progress.
 . [FIX] All: Removed deprecated methods and classes that were scheduled for removal post 1.0
+. [FIX] CCProgressTimer: reverse renamed to reverseProgress in order to prevent possible collision with action#reverse
 
 version 1.0-rc - XX-Apr-2011
 . [FIX] All: Removed many deprecated methods and classes that were scheduled for removal on v1.0
